--- a/cooking.html
+++ b/cooking.html
@@ -50,7 +50,7 @@
     <!-- meta tag-->
     <link rel="shortcut icon" type="image/png" href="https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1853/gp-favicon.png?v=1550651064000">
     <link rel="icon" type="image/png" sizes="96x96" href="https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1853/gp-favicon.png?v=1550651064000">
-    <link rel="stylesheet" href="styles.75cc1b2b.css">
+    <link rel="stylesheet" href="styles.86bb684a.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   </head>
 
@@ -107,32 +107,43 @@
               <p class="text">
                 綠色和平線上「梁祖堯教你煮：母親節走塑大餐」烹飪班詳情：
               </p>
-              <div class="event-details my-6 bg-white">
-                <table class="table-auto w-full">
+              <div class="event-details mt-4 mb-8">
+                <table class="bg-white rounded border table-auto w-full">
                   <tbody>
                     <tr>
                       <td class="border px-4 py-4">
-                        <strong>日期：</strong> 2020年5月3日（星期日）
+                        <strong>日期：</strong>
+                      </td>
+                      <td class="border px-4 py-4">
+                        2020年5月3日（星期日）
                       </td>
                     </tr>
                     <tr class="">
                       <td class="border px-4 py-4">
                         <strong>時間：</strong>
-                        煮食烹飪班 - 下午2時至3時 與梁祖堯即席交流 -
-                        下午3時至3時半
+                      </td>
+                      <td class="border px-4 py-4">
+                        煮食烹飪班 - 下午2時至3時
+                        <br>
+                        與梁祖堯即席交流 - 下午3時至3時半
                       </td>
                     </tr>
                     <tr class="">
                       <td class="border px-4 py-4">
-                        <strong>烹飪班平台：</strong>Zoom（網上登記後會獲得相關鏈結和密碼）
+                        <strong>烹飪班平台：</strong>
+                      </td>
+                      <td class="border px-4 py-4">
+                        Zoom（網上登記後會獲得相關鏈結和密碼）
                       </td>
                     </tr>
                     <tr class="">
                       <td class="border px-4 py-4">
                         <strong>星級大廚：</strong>
+                      </td>
+                      <td class="border px-4 py-4">
                         <div class="speaker mt-4">
                           <img class="speaker__avatar h-40 w-40" src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/fc867f91-cooking_leung_square.jpg" alt="梁祖堯">
-                          <div class="px-6 py-4">
+                          <div class="px-4 py-4">
                             <h3>梁祖堯</h3>
                             <span class="text-sm text-gray-700">煮食兼綠色生活達人</span>
                           </div>
@@ -145,7 +156,7 @@
               <p class="text">
                 煮食兼綠色生活達人梁祖堯將教您烹調母親節素食大餐，包括前菜及主食，分別是「本地茄子迷你薄餅」和「番薯栗子酥皮卷，配車厘茄牛油果意粉」。
               </p>
-              <div class="dishes mb-8" style="display: grid;
+              <div class="dishes mt-4 my-4" style="display: grid;
 
 grid-gap: 16px;
 
