--- a/preference.html
+++ b/preference.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>GP PET Template</title>
+    <title>GP Preference center</title>
     <meta name="description" content="">
-    <link rel="stylesheet" href="styles.86bb684a.css">
+    <link rel="stylesheet" href="styles.7f947f8b.css">
   </head>
   <body class="antialiased text-gray-900 bg-gray-100 relative flex flex-col items-center font-notohk md:h-screen">
     <!--[if IE]>
@@ -15,7 +15,6 @@
         your experience and security.
       </p>
     <![endif]-->
-
     <!-- Add your site or application content here -->
     <!-- header -->
     <header class="header header--green">
@@ -34,7 +33,7 @@
       <section class="preference min-h-screen relative">
         <div class="container">
           <div>
-            <div class="text-center mb-8">
+            <div class="text-center mt-4 mb-8">
               <h1 class="text-2xl font-bold">Manage your preferences</h1>
               <h2 class="text-xl">Your interests:</h2>
             </div>
@@ -96,7 +95,7 @@
               </div>
             </div>
           </div>
-          <div class="form-body mt-8 mx-auto" style="max-width: 600px;">
+          <div class="form-body mx-auto" style="max-width: 600px;">
             <h1 class="text-2xl text-center mb-4 font-bold">
               Contact methods:
             </h1>
