--- a/email/cooking/cooking-receipt.html
+++ b/email/cooking/cooking-receipt.html
@@ -80,6 +80,15 @@
         padding-left: 10px;
         padding-right: 10px;
       }
+
+      ul {
+        padding-left: 8px;
+        list-style-type: none;
+      }
+
+      ul li {
+        padding-left: 8px;
+      }
     </style>
     <!-- @media only screen and (max-width: 640px){*/-->
     <style type="text/css">
@@ -177,7 +186,7 @@
       cellpadding="0"
       cellspacing="0"
       class="mobile"
-      style="margin: 0 auto; background-color: rgb(255, 255, 255);"
+      style="margin: 0 auto; background-color: #ffffff;"
       width="600"
     >
       <tbody>
@@ -188,7 +197,7 @@
               border="0"
               cellpadding="0"
               cellspacing="0"
-              style="background-color: rgb(255, 255, 255);"
+              style="background-color: #ffffff;"
               width="100%"
             >
               <tbody>
@@ -232,7 +241,7 @@
       cellpadding="0"
       cellspacing="0"
       class="mobile"
-      style="margin: 0 auto; background-color: rgb(255, 255, 255);"
+      style="margin: 0 auto; background-color: #ffffff;"
       width="600"
     >
       <tbody>
@@ -244,10 +253,7 @@
               border="0"
               cellpadding="0"
               cellspacing="0"
-              style="
-                background-color: rgb(255, 255, 255);
-                border-collapse: collapse;
-              "
+              style="background-color: #ffffff; border-collapse: collapse;"
               width="100%"
             >
               <tbody>
@@ -301,7 +307,7 @@
                         margin-top: 3px;
                         color: #2b2b2b;
                       "
-                      >感謝您在抗疫同時，仍繼續與<strong>綠色和平一起關注環境及塑膠議題，出席「梁祖堯教你煮：母親節走塑大餐」線上教室</strong>，學煮素食，並與導師即時對話，暢談選購無塑、健康的本地食材以及日常走塑生活心得！</span
+                      >參與烹飪班當天未能及時抄筆記？我們已為你準備好：</span
                     >
                   </td>
                 </tr>
@@ -317,14 +323,93 @@
                   </td>
                 </tr>
                 <tr>
+                  <td class="fullCenter" valign="top" width="100%">
+                    <span
+                      style="
+                        font-family: 'Microsoft JhengHei', 'Heiti TC',
+                          sans-serif;
+                        font-size: 14px;
+                        line-height: 1.5;
+                        letter-spacing: 1px;
+                        margin-top: 3px;
+                        color: #2b2b2b;
+                      "
+                    >
+                      <div>
+                        <ul>
+                          <li>
+                            <strong style="color: #66cc00;"
+                              >本地茄子迷你薄餅</strong
+                            >
+                            <br /><br />
+                            <ul>
+                              <li>
+                                所需材料：茄子1個、車厘茄20粒、蕃茄意粉醬8湯匙、羅勒1束、薄餅碎芝士（Pizza
+                                Mix Cheese）50 g
+                              </li>
+                              <br />
+                              <li>
+                                步驟：<br />
+                                1. 茄子切成2cm薄片，洒鹽，黑胡椒和橄欖油。<br />
+                                2. 車厘茄切片。<br />
+                                3.
+                                在茄子上先刷上一層番茄醬，然後放羅勒葉和車厘茄，再鋪上芝士，以200度焗15分鐘即可
+                              </li>
+                            </ul>
+                          </li>
+                          <br />
+                          <li>
+                            <strong style="color: #66cc00;"
+                              >番薯栗子酥皮卷，配車厘茄牛油果意粉</strong
+                            >
+                            <br /><br />
+                            <ul>
+                              <li>
+                                所需材料：去皮栗子6粒、黃心番薯1個、酥皮1塊、雞蛋1隻、意粉1束、牛油果2個、車厘茄10粒、檸檬1個、洋蔥1個、百里香1束
+                              </li>
+                              <br />
+                              <li>
+                                步驟：<br />
+                                1.
+                                栗子和番薯煮熟，番薯壓爛，栗子切碎，加入鹽，胡椒，和百里香調味，混合。<br />
+                                2. 酥皮包住番薯餡，包好外面𠝹花
+                                ，掃上蛋液，放入180焗爐，焗15分鐘<br />
+                                3. 意粉在鹽水中煮熟，拿出來混合橄欖油。<br />
+                                4.
+                                把牛油果用車厘茄檸檬汁和洋蔥造成醬汁，伴意粉進食。
+                              </li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </div>
+                    </span>
+                  </td>
+                </tr>
+                <tr>
                   <td
                     align="left"
-                    style="width: 90%; margin: 0 auto; padding: 0px;"
+                    class="fullCenter"
+                    style="line-height: 32px;"
+                    valign="top"
+                    width="100%"
                   >
-                    <img
-                      src="https://secured-static.greenpeace.org/hk/Global/hk/artworks/ebulletins/2019/01/email-line.png"
-                      style="width: 100%;"
-                    />
+                    &nbsp;
+                  </td>
+                </tr>
+                <tr>
+                  <td class="fullCenter" valign="top" width="100%">
+                    <span
+                      style="
+                        font-family: 'Microsoft JhengHei', 'Heiti TC',
+                          sans-serif;
+                        font-size: 14px;
+                        line-height: 1.5;
+                        letter-spacing: 1px;
+                        margin-top: 3px;
+                        color: #2b2b2b;
+                      "
+                      >重溫每個步驟，請點擊以下鏈結：</span
+                    >
                   </td>
                 </tr>
                 <tr>
@@ -351,30 +436,29 @@
                           margin-top: 3px;
                           color: #2b2b2b;
                         "
-                        >綠色和平希望收集您的意見，<br />好讓我們在不久的將來能舉辦更多合您心意的活動。</span
-                      ><br />
-                      <br /><strong
-                        ><a
-                          href="https://zh.research.net/r/thankyou_email"
-                          style="
-                            width: 50%;
-                            display: inline-block;
-                            background: #66cc00;
-                            padding: 12px 20px;
-                            color: #ffffff;
-                            font-family: 'Microsoft JhengHei', 'Heiti TC',
-                              Helvetica, sans-serif;
-                            font-size: 16px;
-                            font-weight: bold;
-                            text-align: center;
-                            letter-spacing: 0px;
-                            text-decoration: none;
-                            border-radius: 2px;
-                          "
-                          target="_blank"
-                          >3分鐘填寫問卷</a
-                        ></strong
-                      >
+                        ><strong
+                          ><a
+                            href="https://zh.research.net/r/thankyou_email"
+                            style="
+                              width: 50%;
+                              display: inline-block;
+                              background: #66cc00;
+                              padding: 12px 20px;
+                              color: #ffffff;
+                              font-family: 'Microsoft JhengHei', 'Heiti TC',
+                                Helvetica, sans-serif;
+                              font-size: 16px;
+                              font-weight: bold;
+                              text-align: center;
+                              letter-spacing: 0px;
+                              text-decoration: none;
+                              border-radius: 2px;
+                            "
+                            target="_blank"
+                            >重溫線上烹飪班錄影片段</a
+                          ></strong
+                        >
+                      </span>
                     </p>
                   </td>
                 </tr>
@@ -390,14 +474,20 @@
                   </td>
                 </tr>
                 <tr>
-                  <td
-                    align="left"
-                    style="width: 90%; margin: 0 auto; padding: 0px;"
-                  >
-                    <img
-                      src="https://secured-static.greenpeace.org/hk/Global/hk/artworks/ebulletins/2019/01/email-line.png"
-                      style="width: 100%;"
-                    />
+                  <td class="fullCenter" valign="top" width="100%">
+                    <span
+                      style="
+                        font-family: 'Microsoft JhengHei', 'Heiti TC',
+                          sans-serif;
+                        font-size: 14px;
+                        line-height: 1.5;
+                        letter-spacing: 1px;
+                        margin-top: 3px;
+                        color: #2b2b2b;
+                      "
+                      >我們期待看到您親手製作母親節走塑大餐，誠邀您將為製成品拍照、分享至社交平台上，並加上#母親節走塑
+                      hashtag。您也可以透過Facebook或Instagram，把照片傳送給我們！</span
+                    >
                   </td>
                 </tr>
                 <tr>
@@ -423,7 +513,7 @@
                         margin-top: 3px;
                         color: #2b2b2b;
                       "
-                      >再次感謝您的參與，請支持我們繼續以行動為環境帶來正面改變！</span
+                      >不論面對多困難的局面，環境守護的工作不會停下；堅守環境前線，需要您沿路一起並肩同行！再次感謝您的支持！</span
                     >
                   </td>
                 </tr>
@@ -520,7 +610,7 @@
           <td
             align="left"
             height="20"
-            style="background-color: rgb(255, 255, 255);"
+            style="background-color: #ffffff;"
             valign="top"
             width="100"
           >
@@ -594,7 +684,7 @@
           <td
             align="left"
             height="20"
-            style="background-color: rgb(255, 255, 255);"
+            style="background-color: #ffffff;"
             valign="top"
             width="100"
           >
