--- a/src/cooking.html
+++ b/src/cooking.html
@@ -77,7 +77,7 @@
       sizes="96x96"
       href="https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1853/gp-favicon.png?v=1550651064000"
     />
-    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./styles/index.scss" />
     <script
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"
@@ -158,10 +158,8 @@
               <p class="text">
                 綠色和平線上「梁祖堯教你煮：母親節走塑大餐」烹飪班詳情：
               </p>
-              <div class="event-details">
-                <table
-                  class="bg-white rounded my-4 py-4 border table-auto w-full"
-                >
+              <div class="event-details mt-4 mb-8">
+                <table class="bg-white rounded border table-auto w-full">
                   <tbody>
                     <tr>
                       <td class="border px-4 py-4">
