--- a/email/cooking/cooking-reminder.html
+++ b/email/cooking/cooking-reminder.html
@@ -307,12 +307,16 @@
                         margin-top: 3px;
                         color: #2b2b2b;
                       "
-                      >提提您- 您已報名參加的<br />
-                      <strong
-                        >綠色和平「地球日環保紀錄片節」開幕紀錄片映後座談會</strong
-                      ><br />
-                      將於一小時後開始
-                    </span>
+                      ><strong
+                        style="
+                          font-size: 22px;
+                          font-weight: bold;
+                          color: #66cc00;
+                        "
+                        >2020年5月3日 星期日<br />
+                        2pm - 3:30pm</strong
+                      ></span
+                    >
                   </td>
                 </tr>
                 <tr>
@@ -365,52 +369,17 @@
                         margin-top: 3px;
                         color: #2b2b2b;
                       "
-                      >這是您進入Google Hangouts Meet映後座談會的<a
-                        href="https://bit.ly/GPHKMeet"
+                      >這是您進入Zoom煮食教室的<a
+                        href="https://bit.ly/2XXAgdh"
                         target="_blank"
                         >個人鏈結</a
-                      >。<br />
+                      ><br />
+                      密碼將於活動當天透過電郵發短訊傳送給你。<br />
                       如欲邀請好友參加是次映後座談會，請分享<a
-                        href="https://act.greenpeace.org/page/59146/petition/1"
+                        href="https://act.greenpeace.org/page/59859/petition/1"
                         target="_blank"
                         >此訪客報名鏈結</a
                       >。
-                    </span>
-                  </td>
-                </tr>
-                <tr>
-                  <td
-                    align="left"
-                    class="fullCenter"
-                    style="line-height: 16px;"
-                    valign="top"
-                    width="100%"
-                  >
-                    &nbsp;
-                  </td>
-                </tr>
-                <tr>
-                  <td class="fullCenter" valign="top" width="100%">
-                    <span
-                      style="
-                        font-family: 'Microsoft JhengHei', 'Heiti TC',
-                          sans-serif;
-                        font-size: 14px;
-                        line-height: 1.5;
-                        letter-spacing: 1px;
-                        margin-top: 3px;
-                        color: #2b2b2b;
-                      "
-                      >為確保您的網絡安全及座談會順利舉行，請注意以下事項：<br />
-                      - 如欲以手機或平板電腦進入座談會，請先下載應用程式（<a
-                        href="https://apps.apple.com/us/app/hangouts-meet-by-google/id1013231476"
-                        >IOS</a
-                      >、<a
-                        href="https://play.google.com/store/apps/details?id=com.google.android.apps.meetings"
-                        >Android</a
-                      >）<br />
-                      - 進入Google Hangouts Meet前請先登入Gmail<br />
-                      - 請勿將映後座談會的個人鏈結直接公開，或傳給其他人
                     </span>
                   </td>
                 </tr>
@@ -449,10 +418,73 @@
                 </tr>
                 <tr>
                   <td class="fullCenter" valign="top" width="100%">
+                    <span
+                      style="
+                        font-family: 'Microsoft JhengHei', 'Heiti TC',
+                          sans-serif;
+                        font-size: 14px;
+                        line-height: 1.5;
+                        letter-spacing: 1px;
+                        margin-top: 3px;
+                        color: #2b2b2b;
+                      "
+                      >為確保您的網絡安全及活動順利舉行，請注意以下事項：<br />
+                      - 請勿將煮食教室的個人鏈結公開，或傳給其他人<br />
+                      - 如欲以手機或平板電腦進入座談會，請先下載應用程式（<a
+                        href="https://itunes.apple.com/us/app/id546505307"
+                        >IOS</a
+                      >、<a
+                        href="https://play.google.com/store/apps/details?id=us.zoom.videomeetings"
+                        >Android</a
+                      >、<a href="https://zoom.us/client/latest/Zoom.pkg"
+                        >電腦</a
+                      >）<br />
+                      - 活動將準時於2時正開始，請提早3-5分鐘進入Zoom<br />
+                      - 活動將會被錄影<br />
+                      -
+                      活動設有問答環節，如欲發問，請在「Chat」中舉手示意，待主持示意後再發言
+                    </span>
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    align="left"
+                    class="fullCenter"
+                    style="line-height: 16px;"
+                    valign="top"
+                    width="100%"
+                  >
+                    &nbsp;
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    align="left"
+                    style="width: 90%; margin: 0 auto; padding: 0px;"
+                  >
+                    <img
+                      src="https://secured-static.greenpeace.org/hk/Global/hk/artworks/ebulletins/2019/01/email-line.png"
+                      style="width: 100%;"
+                    />
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    align="left"
+                    class="fullCenter"
+                    style="line-height: 32px;"
+                    valign="top"
+                    width="100%"
+                  >
+                    &nbsp;
+                  </td>
+                </tr>
+                <tr>
+                  <td class="fullCenter" valign="top" width="100%">
                     <p style="text-align: center; width: 100%;">
                       <strong
                         ><a
-                          href="https://bit.ly/GPHKMeet"
+                          href="https://bit.ly/2XXAgdh"
                           style="
                             width: 50%;
                             display: inline-block;
@@ -469,7 +501,7 @@
                             border-radius: 2px;
                           "
                           target="_blank"
-                          >進入映後座談會</a
+                          >進入煮食教室</a
                         ></strong
                       >
                     </p>
