--- a/src/preference.html
+++ b/src/preference.html
@@ -8,7 +8,7 @@
     />
     <title>GP Preference center</title>
     <meta name="description" content="" />
-    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./styles/index.scss" />
   </head>
   <body
     class="antialiased text-gray-900 bg-gray-100 relative flex flex-col items-center font-notohk md:h-screen"
