--- a/src/petition.html
+++ b/src/petition.html
@@ -49,7 +49,7 @@
             <div class="cover-image relative">
               <img
                 class="w-full"
-                src="https://peoplevsoil.org/zh-HK/assets/files/shared/slideshow/GP0STPBDA_PressMedia.jpg"
+                src="https://api.greenpeace.org.hk/2019/supermarket/img/greenpeace_plastic_kv_c.fa2b7e62.jpg"
                 alt=""
               />
             </div>
@@ -57,95 +57,37 @@
               <div class="flex flex-wrap justify-between">
                 <div class="mt-8 mb-4">
                   <h1 class="text-4xl font-bold">
-                    Building a Visual Language
-                    <p class="text-base text-gray-700 mt-2">
-                      Behind the scenes of our new design system
-                    </p>
+                    <div>拒絕無謂包裝，</div>
+                    <div>要求超市走塑</div>
                   </h1>
-                </div>
-                <div
-                  class="md:hidden w-full flex flex-wrap justify-between items-center"
-                >
-                  <div class="participants mr-2">
-                    <ul class="text-gray-700 text-sm">
-                      <li>
-                        <span class="font-bold">Chris Chan</span> has signed
-                      </li>
-                      <li>
-                        <span class="font-bold">Chris Chan</span> has signed
-                      </li>
-                      <li>
-                        <span class="font-bold">Chris Chan</span> has signed
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="badge">
-                    <div class="badge-image-wrapper w-full h-full">
-                      <img
-                        class="mx-auto h-32 w-32 rounded-full object-cover"
-                        src="https://peoplevsoil.org/zh-HK/assets/files/shared/slideshow/GP0STPBDA_PressMedia.jpg"
-                        alt="badge"
-                      />
-                      <div
-                        class="absolute left-0 top-0 w-full h-full inset-y-auto circle-progress-bar"
-                      >
-                        <svg
-                          class="w-full h-full fill-current text-transparent"
-                          viewBox="0 0 100 100"
-                        >
-                          <circle
-                            cx="50"
-                            cy="50"
-                            r="46"
-                            fill="none"
-                            stroke="white"
-                            stroke-opacity="0.3"
-                            stroke-width="3"
-                          ></circle>
-                          <circle
-                            cx="50"
-                            cy="50"
-                            r="46"
-                            fill="none"
-                            stroke="white"
-                            stroke-width="4"
-                            stroke-dasharray="200"
-                            stroke-dashoffset="30"
-                          ></circle>
-                        </svg>
-                      </div>
-                    </div>
-                  </div>
+                  <p class="text-base text-gray-700 mt-4">
+                    #無謂包裝 #超市走塑 #UnwrapOurGrocery
+                  </p>
                 </div>
               </div>
               <div class="line"></div>
               <p class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
-                officiis magni autem laboriosam earum, adipisci itaque odio
-                ipsum nam, dignissimos repellat nesciunt sit cupiditate
-                molestiae odit ab, voluptate consequatur id.
+                走進超市，映入眼簾的是各式各樣的貨品，以及鋪天蓋地的即棄塑膠包裝。貨架上的蔬菜、生果、麵包等，都被保鮮紙、膠兜、果網或發泡膠盤等即棄塑膠層層包裹。拆開這些無謂的包裝只須數秒，帶來的環境污染卻禍害深遠。
               </p>
               <button
                 class="md:hidden mt-3 mb-6 w-full shadow bg-gporange text-white text-center font-bold py-4 px-4 rounded"
               >
-                Sign the petition
+                立即聯署
               </button>
               <p class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
-                officiis magni autem laboriosam earum, adipisci itaque odio
-                ipsum nam, dignissimos repellat nesciunt sit cupiditate
-                molestiae odit ab, voluptate consequatur id.
+                調查發現84%的超市食物被無謂的即棄塑膠包裹著，當中
+                52%更由超市自行加上。而分店數目最多的惠康，塑膠包裝使用率達82%；分店第二多的百佳達84%。另外，三間分店較少的品牌也不容忽視，City'super、AEON及一田的包膠率分別達82%及89%及99%。
               </p>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
-                sit iste possimus dolorem illo, animi est enim, sint eos odio ab
-                eveniet id quasi deleniti ex excepturi deserunt voluptatibus
-                nemo.
+                這不禁令人反思，這些包裝都是必須的嗎？香港每年有至少112噸塑膠包裝垃圾經河流流入海洋，超市中的大量即棄包裝正正就是重災區之一。濫用無謂包裝，不但會逼爆堆填區，更導致塑膠圍港。一旦塑膠垃圾經由河流進入大海，分裂成數以萬計的微塑膠，會危害海洋生態，更會透過食物鏈進入人體，威脅我們的健康。
               </p>
             </div>
           </div>
           <div class="w-full md:w-1/2 lg:w-1/3">
-            <div class="sticky top-0 form-container self-center md:px-4">
+            <div
+              class="sticky form-container self-center md:px-4"
+              style="top: 20px;"
+            >
               <form class="form-body">
                 <div class="mb-8 form-row text-center">
                   <h2 class="text-2xl font-bold">Make a change</h2>
