create cta template

--- a/src/petition.html
+++ b/src/petition.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./styles/index.scss" />
   </head>
   <body
-    class="antialiased text-gray-900 bg-gray-100 relative flex flex-col items-center font-notohk md:h-screen"
+    class="antialiased text-gray-900 bg-gray-100 relative flex flex-col items-center font-notohk"
   >
     <!--[if IE]>
       <p class="browserupgrade">
@@ -67,19 +67,19 @@
               </div>
               <div class="line"></div>
               <p class="text">
-                走進超市，映入眼簾的是各式各樣的貨品，以及鋪天蓋地的即棄塑膠包裝。貨架上的蔬菜、生果、麵包等，都被保鮮紙、膠兜、果網或發泡膠盤等即棄塑膠層層包裹。拆開這些無謂的包裝只須數秒，帶來的環境污染卻禍害深遠。
+                每年於香港，至少112噸塑膠包裝垃圾經河流排入海洋，相當於約7架雙層巴士的重量。除了破壞環境，包裝塑膠更入侵食物鏈：海鮮、食鹽亦被驗出含有常用於超市即棄包裝的塑膠碎片，威脅健康。
               </p>
-              <button
-                class="md:hidden mt-3 mb-6 w-full shadow bg-gporange text-white text-center font-bold py-4 px-4 rounded"
-              >
-                立即聯署
-              </button>
               <p class="text">
-                調查發現84%的超市食物被無謂的即棄塑膠包裹著，當中
-                52%更由超市自行加上。而分店數目最多的惠康，塑膠包裝使用率達82%；分店第二多的百佳達84%。另外，三間分店較少的品牌也不容忽視，City'super、AEON及一田的包膠率分別達82%及89%及99%。
+                綠色和平發佈的《香港連鎖超市走塑表現評級報告》，指出本港七間連鎖超市的走塑表現均不理想。當中百佳和惠康同屬超市龍頭，但前者較積極發展可重用銷售模式，並主動公開裸賣試行計劃的成效，而後者對於減塑計劃、創新政策與塑膠足跡紀錄皆未有完整政策。
               </p>
-              <p>
-                這不禁令人反思，這些包裝都是必須的嗎？香港每年有至少112噸塑膠包裝垃圾經河流流入海洋，超市中的大量即棄包裝正正就是重災區之一。濫用無謂包裝，不但會逼爆堆填區，更導致塑膠圍港。一旦塑膠垃圾經由河流進入大海，分裂成數以萬計的微塑膠，會危害海洋生態，更會透過食物鏈進入人體，威脅我們的健康。
+              <p class="text">
+                超市即棄包裝是塑膠污染的源頭重災區之一；香港連鎖超市必須加快步伐，訂下塑膠減量目標，並提供更豐富的走塑產品選擇，加入國際的改變風潮，負起對環境、顧客以至我們下一代的責任。
+              </p>
+              <p class="text">
+                事實上，早已有人實踐走塑方案，本港亦有超市已踏出減塑的第一步：有賴逾萬人經聯署、參與查膠隊等行動表態，綠色和平成功推動百佳推行裸裝蔬果試行計劃，並公布成功減膠及增加銷量；成為全港首間大型超市設立裸買補充站，讓顧客自備容器購買家庭及個人護理用品。
+              </p>
+              <p class="text">
+                這是一個好開始，但推動超市淘汰無謂塑膠包裝、提供減塑包裝指引、公開塑膠包裝使用量、發展可重用包裝銷售模式及制定完整減塑藍圖，並提供豐富的走塑購物選項讓我們真的「有得揀」，仍急需更多人以行動表態。
               </p>
             </div>
           </div>
@@ -140,9 +140,8 @@
                   <input name="req" type="hidden" value="post_data" />
                 </div>
                 <div class="mb-8 form-row text-center">
-                  <h2 class="text-2xl font-bold">Make a change</h2>
                   <p class="text-base">
-                    Stop the destruction of the Arctic
+                    一同發聲要求包括惠康在內的超市回應你的訴求：<br />制定完整減塑藍圖、發展可重用包裝銷售模式、淘汰無謂塑膠包裝，並提供走塑購物選項。
                   </p>
                 </div>
                 <div class="form-row">
@@ -192,7 +191,7 @@
                     />
                   </div>
                   <div class="flex-none mb-3">
-                    <span class="mx-2 text-gray-400 pointer-events-none"
+                    <span class="mx-1 text-gray-400 pointer-events-none"
                       >-</span
                     >
                   </div>
@@ -210,7 +209,7 @@
                 </div>
                 <div class="form-row">
                   <label class="form-label">
-                    出生日期 Birthday
+                    出生日期 Birthdate
                   </label>
                   <div class="relative">
                     <input
@@ -251,214 +250,14 @@
                 </div>
                 <div class="form-row">
                   <button class="form-button">
-                    Sign the petition
+                    立即聯署
                   </button>
                 </div>
               </form>
             </div>
           </div>
         </div>
-        <article class="mt-6">
-          <div class="content px-4 py-4">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
-              ducimus quis, magnam quod deserunt assumenda animi tempore.
-              Adipisci, architecto repellendus, ea nemo blanditiis
-              necessitatibus incidunt, ab fugit a delectus saepe.
-            </p>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa
-              dicta perspiciatis ea. Minus alias quasi modi soluta maiores enim
-              tempore iure hic, ea nobis atque omnis necessitatibus consectetur
-              eos illum!
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
-              ducimus quis, magnam quod deserunt assumenda animi tempore.
-              Adipisci, architecto repellendus, ea nemo blanditiis
-              necessitatibus incidunt, ab fugit a delectus saepe.
-            </p>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa
-              dicta perspiciatis ea. Minus alias quasi modi soluta maiores enim
-              tempore iure hic, ea nobis atque omnis necessitatibus consectetur
-              eos illum!
-            </p>
-          </div>
-        </article>
       </section>
-      <section class="py-12 bg-gray-400 section-hero relative">
-        <!-- Hero -->
-        <div class="hero-overlay absolute-full invisible"></div>
-        <div class="hero-banner absolute-full invisible"></div>
-        <!-- Hero -->
-        <!-- Form -->
-        <div
-          class="form-container container mx-auto self-center min-h-screen md:inset-auto md:px-4 sm:max-w-sm lg:max-w-md"
-        >
-          <div class="form-header">
-            <h2>
-              堅守香港海洋最後一道防線
-            </h2>
-          </div>
-          <form class="form-body">
-            <div class="mb-8 form-row text-center">
-              <h2 class="text-2xl font-bold">Make a change</h2>
-              <p class="text-base">
-                Stop the destruction of the Arctic
-              </p>
-            </div>
-            <div class="form-row">
-              <div class="flex flex-wrap">
-                <div class="w-full mb-4 md:mb-0 md:w-1/2 md:pr-1">
-                  <label class="form-label">
-                    姓氏 Last Name
-                  </label>
-                  <input
-                    class="form-input"
-                    type="text"
-                    placeholder="姓氏 Last Name"
-                  />
-                </div>
-                <div class="w-full md:w-1/2 md:pl-2">
-                  <label class="form-label">
-                    名字 First Name
-                  </label>
-                  <input
-                    class="form-input"
-                    type="text"
-                    placeholder="名字 First Name"
-                  />
-                </div>
-              </div>
-            </div>
-            <div class="form-row">
-              <label for="" class="form-label">
-                電郵地址 Email Address
-              </label>
-              <input
-                type="text"
-                class="form-input"
-                placeholder="電郵地址 Email Address"
-              />
-            </div>
-            <div class="form-row flex items-end">
-              <div class="flex-none">
-                <input
-                  class="w-16 form-input"
-                  type="text"
-                  placeholder="852"
-                  value="852"
-                />
-              </div>
-              <div class="flex-none mb-3">
-                <span class="mx-2 text-gray-400 pointer-events-none">-</span>
-              </div>
-              <div class="flex-1">
-                <label class="form-label">
-                  聯絡電話 Mobile Number
-                </label>
-                <input
-                  class="form-input"
-                  type="text"
-                  placeholder="聯絡電話 Mobile Number"
-                />
-              </div>
-            </div>
-            <div class="form-row">
-              <label class="form-label">
-                出生日期 Birthday
-              </label>
-              <div class="relative">
-                <input
-                  class="form-input"
-                  type="text"
-                  placeholder="DD/MM/YYYY"
-                />
-                <div
-                  class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
-                >
-                  <svg
-                    class="fill-current h-4 w-4"
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 20 20"
-                  >
-                    <path
-                      d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
-                    />
-                  </svg>
-                </div>
-              </div>
-            </div>
-            <div class="form-row">
-              <label class="flex items-start">
-                <input checked type="checkbox" />
-                <span class="form-label">
-                  <span class="block text-xs text-gray-600"
-                    >我願意收到綠色和平發送的通訊，讓我能掌握環保工作的最新脈動！我同意綠色和平按照<u>個人資料政策</u>與我聯絡，包括提供環保工作資訊及捐款呼籲等。</span
-                  >
-                </span>
-              </label>
-            </div>
-            <div class="form-row">
-              <button class="form-button">
-                Sign the petition
-              </button>
-            </div>
-          </form>
-        </div>
-        <!-- Form -->
-      </section>
-      <!-- Banner -->
-      <!-- Article 1 -->
-      <article class="hidden article">
-        <div
-          class="container mx-auto grid grid-flow-row grid-cols-1 lg:grid-cols-3 gap-4"
-        >
-          <div>
-            <h2 class="font-black text-5xl mb-2">守護大嶼</h2>
-            <h3 class="font-bold text-2xl">堅守香港海洋最後一道防線</h3>
-          </div>
-          <div>
-            <p class="text">
-              香港海洋孕育近6千種海洋生物，東大嶼水域生態豐富多樣，是國家重點保護野生動物白腹海雕的繁殖及棲息地，更錄得全球獨有的鮑氏雙足蜥，附近水域亦發現稀有的軟珊瑚海筆。
-            </p>
-            <p class="text">
-              政府強推「明日大嶼」，在如此敏感的生態區域大興土木，必然破壞珍貴的海洋生態；它亦是全球最昂貴的基建，造價至少6,240億元，不但可能為香港庫房帶來沉重負擔，亦無法有效解決香港的房屋問題。
-            </p>
-          </div>
-          <div>
-            <p class="text">
-              事實上，香港有比「明日大嶼」更明智的選項：我們最新的調查發現，發展棕地造價僅333億元，比填海便宜8成，卻可興建近14萬伙公營房屋。
-            </p>
-            <p class="text">
-              海洋住屋不對立，為了珍貴脆弱的海洋生態，及讓市民安居樂業，一起發聲，要求政府優先發展棕地，放棄不負責任的「明日大嶼」！
-            </p>
-          </div>
-        </div>
-      </article>
-      <!-- Article 2 -->
-      <article class="hidden article bg-gray-100 relative">
-        <div
-          class="container mx-auto grid grid-flow-row grid-cols-1 lg:grid-cols-3 gap-4"
-        >
-          <div class="lg:col-start-1 lg:col-end-3">
-            <img
-              class="w-full"
-              src="https://api.greenpeace.org.hk/2019/elm/img/DJI_0431.c6b2b22f.jpg"
-              alt=""
-            />
-          </div>
-          <div class="self-end relative lg:col-start-3 lg:col-end-4">
-            <p class="text">
-              填海選址鄰近海域具生態價值，或令海洋或陸地物種的棲息地永久喪失。
-            </p>
-            <p class="text">
-              我們與6個環保及關注團體發佈的生態調查發現，鄰近填海選址的周公島，具國家二級保護野生動物白腹海鵰的鳥巢，全球獨有的鮑氏雙足蜥，更在中部水域錄得一種稀有的軟珊瑚海筆，生態價值絕不應被刻意低估。
-            </p>
-          </div>
-        </div>
-      </article>
     </main>
     <!-- footer -->
     <footer class="footer">
