--- a/cooking.html
+++ b/cooking.html
@@ -50,9 +50,9 @@
     <!-- meta tag-->
     <link rel="shortcut icon" type="image/png" href="https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1853/gp-favicon.png?v=1550651064000">
     <link rel="icon" type="image/png" sizes="96x96" href="https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1853/gp-favicon.png?v=1550651064000">
-    <link rel="stylesheet" href="styles.3417a320.css">
+    <link rel="stylesheet" href="styles.cea2d09f.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-  </head>
+  <link rel="stylesheet" href="main.46b971a9.css"></head>
 
   <body class="antialiased text-gray-900 bg-gray-100 relative flex flex-col items-center font-notohk md:h-screen">
     <!-- Google Tag Manager (noscript) -->
@@ -280,7 +280,7 @@ grid-auto-flow: column;
     </footer>
     <!-- end of footer -->
     <!-- scripts -->
-    <script src="main.417db390.js"></script>
+    <script src="main.32f390d2.js"></script>
     <!-- end of scripts -->
   </body>
 </html>
