--- a/src/sta.html
+++ b/src/sta.html
@@ -45,7 +45,7 @@
     <main id="app" class="main">
       <section class="py-12 section-hero relative">
         <!-- Hero -->
-        <div class="hero-overlay absolute-full invisible"></div>
+        <div class="hero-overlay absolute-full"></div>
         <div class="hero-banner absolute-full"></div>
         <!-- Hero -->
         <!-- Form -->
